# csc-reach

./: .flake8  .gitignore  Makefile  README.md  UI_FIXES_SUMMARY.md  WHATSAPP_AUTO_SEND_SUMMARY.md  WINDOWS_COMPATIBILITY_FIXES.md  WINDOWS_FIX_SUMMARY.md  build.py  debug_file_loading.py  debug_translations.py  delivery_tracking.db  final_translation_test.py  packaging.md  pyproject.toml  pytest.ini  quota_data.json  requirements.txt  sample_customers.csv  setup.py  tasks.md  test_chardet.py  test_dialog_translations.py  test_logging_system.py  test_message_logging_demo.py  test_whatsapp_cross_platform.py  test_whatsapp_tab_closing.py  test_windows_compatibility.py  whatsapp_templates.json
.amazonq/rules/: development-guide.md  prompts-q-dev.md  q-learning-csc-reach.md  system-prompt.md
.amazonq/rules/project-intelligence/: arquitetura.md  guia-backend-dev.md  guia-frontend-dev.md  pilha-tecnica.md  progresso.md  projeto.md
.github/workflows/: build-cross-platform.yml  build-cross-platform.yml.bk  build-macos.yml  build-windows.yml
.kiro/hooks/: auto-commit-push.kiro.hook  code-quality-analyzer.kiro.hook  source-docs-sync.kiro.hook
.kiro/specs/csc-reach-comprehensive-platform/: design.md  requirements.md  tasks.md
.kiro/specs/fix-unicode-encoding-build/: design.md  requirements.md  tasks.md
.kiro/steering/: development-rules.md  product.md  release-workflow.md  structure.md  tech.md
assets/icons/: csc-reach.icns  messager.icns
assets/templates/: welcome_email.yaml  welcome_whatsapp.yaml
config/: default_config.yaml
docker/: Dockerfile.windows
docs/: README.md  chardet_fix_summary.md  message_logging_system.md  pywhatkit_integration_summary.md  whatsapp_api_guide.md  whatsapp_gui_integration_summary.md  whatsapp_implementation_comparison.md  whatsapp_local_implementation.md
docs/analysis/: whatsapp_api_compliance_review.md
docs/dev/: BUILD_GUIDE.md  BUILD_SYSTEM.md  DATABASE_WINDOWS_COMPATIBILITY.md  DEVELOPER_GUIDE.md  RELEASE_AUTOMATION.md  automated-releases.md  channel_mapping_system.md  design.md  email_formatting_approaches.md  multi_format_table_processing.md  packaging.md  requirements.md  tasks.md  template_management_system.md  windows_build_guide.md
docs/summaries/: LOGGING_SYSTEM_FIX_SUMMARY.md  TRANSLATION_COMPLETION_SUMMARY.md  TRANSLATION_IMPLEMENTATION_SUMMARY.md  WHATSAPP_WEB_ENHANCEMENTS_SUMMARY.md  WINDOWS_AUTO_SEND_ENHANCEMENTS.md  build_summary.md  build_system_enhancement_summary.md  chrome_javascript_fix.md  complete-workflow-implementation.md  csv_import_config_implementation.md  database_logging_fixes.md  dynamic_variable_management_implementation.md  implementation_summary.md  macos-workflow-summary.md  macos_permissions_fix_implementation.md  mouse_click_enhancement.md  multi_format_table_processing_implementation.md  project_restructure_and_i18n_completion.md  project_restructure_summary.md  robust_logging_system_implementation.md  template_management_i18n_implementation.md  template_management_implementation.md  ui_fixes_summary.md  whatsapp_multi_message_implementation.md  whatsapp_web_final_solution.md  whatsapp_web_tab_closing_fix.md  whatsapp_web_windows_enhancements.md  windows_build_summary.md  workflow-improvements-summary.md
docs/user/: README.md  WINDOWS_COMPATIBILITY_GUIDE.md  macos_installation_guide.md  macos_permissions_guide.md  quick_start_guide.md  troubleshooting_guide.md  user_manual.md  whatsapp_api_setup_tutorial.md  windows_installation_guide.md
examples/: csv_import_config_demo.py  dynamic_variable_demo.py  multi_format_demo.py  whatsapp_multi_message_demo.py
generated-diagrams/: database_er_diagram.puml  message_sending_sequence.puml
generated-docs/: API.md  BACKEND.md  DATA_SYSTEM.md  FRONTEND.md  README.md  SYSTEM_ANALYSIS.md  TEST_COVERAGE_PLAN.md  repomix_output.xml
scripts/: build_all.py  build_macos.py  build_windows.py  bump_version.py  create_dmg.py  create_icons.py  demo_i18n.py  fix_database.py  release.py  test_message_status.py  test_runner.py
scripts/dev/: debug_direct_translate.py  debug_translations_fixed.py  macos_diagnostic.py  migrate_database.py  setup_dev.py  test_outlook_integration.py
src/multichannel_messaging/: __init__.py  main.py
src/multichannel_messaging/core/: __init__.py  accessibility_manager.py  application_manager.py  column_mapper.py  config_manager.py  csv_processor.py  data_validator.py  database_migration.py  dynamic_variable_manager.py  email_analytics.py  email_composer.py  i18n_manager.py  keyboard_navigation.py  locale_formatter.py  message_logger.py  models.py  progress_manager.py  rate_limiter.py  rtl_support.py  template_manager.py  theme_manager.py  toolbar_manager.py  user_preferences.py  webhook_manager.py  whatsapp_multi_message.py  (+3 more)
tests/: SEBRAE FUP.csv  __init__.py  conftest.py
tests/fixtures/: final_test_export.json  final_test_logs.db  sample_customers.csv  sample_templates.json  test_customers.csv  test_logs.db  test_logs_2.db
tests/gui/: __init__.py  test_main_window.py
tests/integration/: __init__.py  final_translation_test.py  test_csv_import_integration.py  test_dynamic_variable_integration.py  test_multi_format_integration.py  test_template_workflow.py  test_whatsapp_multi_message_integration.py  test_whatsapp_parity.py
tests/performance/: __init__.py  test_csv_processing.py
tests/unit/: __init__.py  minimal_windows_test.py  test_chardet_fallback.py  test_csv_import_config_dialog.py  test_dynamic_variable_manager.py  test_email_channel_fixes.py  test_email_formatting_approaches.py  test_enhanced_outlook_integration.py  test_enhanced_whatsapp_integration.py  test_i18n_comprehensive.py  test_message_logging.py  test_robust_message_logging.py  test_table_processor.py  test_template_i18n.py  test_template_management.py  test_translations.py  test_ui_translations.py  test_variables_panel.py  test_whatsapp_business_service.py  test_whatsapp_local_service.py  test_whatsapp_multi_message.py  test_whatsapp_web_service.py  test_whatsapp_windows_enhanced.py  test_windows_auto_send.py  test_windows_compatibility.py
(+38 files in other folders)
